# zos-ibc

./: .gitmodules  README.md
contracts/: CMakeLists.txt  eosiac.example.yml
contracts/actions/: _helpers.js  addreporter.js  clearamount.js  enablerpt.js  enablext.js  init.js  reporttx.js  rmreporter.js  transfer-zos.js  update.js
contracts/actions/setup/: ibc.js  token.js
contracts/converteribc/: README.md  converteribc.cpp  converteribc.hpp
watcher/: .template.env  README.md  app.yaml  package-lock.json  package.json
watcher/migrations/: 20191212153646_table_setup.js  20200108153646_health_table.js
watcher/src/: db.ts  index.ts  reporter.ts  routes.ts  types.ts  utils.ts  watcher.ts
watcher/src/controller/: HealthController.ts  InfoController.ts  ReportsController.ts
watcher/src/eos/: api.ts  dfuse.ts  fetch.ts  networks.ts  types.ts
watcher/src/logger/: index.ts
watcher/src/models/: Event.ts  Health.ts  Report.ts  WatcherConfig.ts
